--- a/index.ipynb
+++ b/index.ipynb
@@ -1255,7 +1255,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "plt.hist(df.)"
    ]
   },
   {
