Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1255,8 +1255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n",
-    "plt.hist(df.)"
+    "#Your code here"
    ]
   },
   {
